# ydl

./: .dockerignore  .gitignore  .goreleaser.yaml  .travis.yml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  build.sh  concurrent_download.go  download.go  download_test.go  go.mod  go.sum  main.go  main_test.go  simple.go  video_converter.go  video_extractor.go  video_extractor_test.go  ytd.go  ytd_test.go
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  issue_template.md
.github/workflows/: ci.yml  codeql-analysis.yml  dependabot.yml  release.yml  security.yml
api/: api_test.go  apiconv.go  apiconv_test.go  apidata.go  apidata_test.go  apisearch.go  apisearch_test.go  concurrency.go
auth/: auth.go  client_secret.json  ytd-auth.json
cmd/: main.go
cmd/ytd/: ytd.go  ytd_test.go
main/: main.go
pkg/: download.h
pkg/download/: .gitignore  .rustfmt.toml  Cargo.toml
pkg/download/src/: lib.rs
pkg/downloader/: download.go  download_test.go
ytdata/: ytdata.go
