[package]
name            = "ydl-rs"
description     = "download youtube videos to path"
version         = "0.1.0"
authors         = ["Nyah Check <hello@nyah.dev>"]
license         = "MIT"
homepage        = "https://github.com/ch3ck/ydl/pkg/download"
repository      = "https://github.com/ch3ck/ydl"
readme          = "README.md"
categories      = ["web-programming"]
keywords        = [ "rust"]
edition         = "2021"
documentation   = "https://docs.rs/ydl-rs"


[lib]
crate-type = ["staticlib"]

[profile.release]
overflow-checks = true
panic           = "abort"
strip           = "debuginfo"

[dependencies]
clippy      = "0.0.302"
env_logger  = "0.9.0"
libc        = "0.2.112"
log         = "0.4.14"
rustube     = "0.3.7"
tokio       = { version = "1.15.0", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
